# voevent2dict

./: .gitignore  kafka_gcn_example.py  pyproject.toml  vo2dict.py
.github/workflows/: document.yml  pypi-publish.yml  test.yml
docs/: conf.py  index.rst
tests/test_events/: gcn.circulars.json  gcn.classic.voevent.AGILE_GRB_POS_TEST.xml  gcn.classic.voevent.FERMI_GBM_ALERT.xml  gcn.classic.voevent.FERMI_GBM_FIN_POS.xml  gcn.classic.voevent.FERMI_GBM_FLT_POS.xml  gcn.classic.voevent.FERMI_GBM_GND_POS.xml  gcn.classic.voevent.FERMI_GBM_POS_TEST.xml  gcn.classic.voevent.FERMI_GBM_SUBTHRESH.xml  gcn.classic.voevent.FERMI_LAT_POS_TEST.xml  gcn.classic.voevent.FERMI_POINTDIR.xml  gcn.classic.voevent.INTEGRAL_OFFLINE.xml  gcn.classic.voevent.INTEGRAL_POINTDIR.xml  gcn.classic.voevent.INTEGRAL_REFINED.xml  gcn.classic.voevent.INTEGRAL_SPIACS.xml  gcn.classic.voevent.INTEGRAL_WAKEUP.xml  gcn.classic.voevent.INTEGRAL_WEAK.xml  gcn.classic.voevent.IPN_RAW.xml  gcn.classic.voevent.KONUS_LC.xml  gcn.classic.voevent.LVC_INITIAL.xml  gcn.classic.voevent.LVC_PRELIMINARY.xml  gcn.classic.voevent.LVC_RETRACTION.xml  gcn.classic.voevent.MAXI_TEST.xml  gcn.classic.voevent.SWIFT_ACTUAL_POINTDIR.xml  gcn.classic.voevent.SWIFT_BAT_GRB_POS_TEST.xml  gcn.classic.voevent.SWIFT_POINTDIR.xml  gcn.classic.voevent.SWIFT_TOO_FOM.xml  gcn.classic.voevent.SWIFT_TOO_SC_SLEW.xml  gcn.classic.voevent.TEST_COORDS.xml  gcn.notices.icecube.lvk_nu_track_search.json  igwn.gwalert.json
