[project]
name = "voevent2dict"
version = "0.1.0"
description = "Convert VOEvents from their native .xml format into Python dictionaries."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["xml2dict>=0.2.2"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "gcn-kafka>=0.3.3","python-dotenv>=1.0.1","pytest>=8.3.4", "twine", "build"]
docs = ["sphinx>=3.0", "sphinx-rtd-theme"]
